# openclaw-health-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  SPEC.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/openclaw_health_mcp/: __init__.py  __main__.py  analysis.py  demo.py  monitor.py  render.py  report.py  server.py  types.py
src/openclaw_health_mcp/backends/: __init__.py  base.py  linux_proc.py  mock.py
tests/: test_analysis.py  test_backend_linux_proc.py  test_backend_mock.py  test_server.py
